MDEV-8166 : Adding index on new table from select crashes Galera cluster

In wsrep, CTAS should be handled like a regular transaction.
Added a test case.